# canting-chatbot-hackathon

./: .env.example  .gitignore  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
backend/: Dockerfile  entrypoint.sh  main.py  pyproject.toml  test_graph.py
backend/alembic/: env.py
backend/alembic/versions/: 2fae8b7aafb7_add_images_column_to_products.py  49fc715dca1f_add_username_column_to_users.py  60e45efa119a_initial_migration.py  7c6f6c6c2b37_add_hashed_password_to_users.py  fbd11dbe3b7f_add_sku_to_products.py
backend/app/agents/: graph.py  router.py  tools.py  vision.py
backend/app/api/: auth.py
backend/app/api/v1/: auth_routes.py  complaints.py  dashboard.py  files.py  inventory.py  knowledge.py  orders.py  owner.py  reports.py  shipping.py  webhooks.py
backend/app/core/: config.py  logger.py  prompt_templates.py
backend/app/db/: postgres.py  vector_store.py
backend/app/models/: domain.py  schemas.py
backend/app/services/: agent_service.py  llm_service.py  minio_service.py  rag_service.py  waha_service.py
backend/milvus_utils/: test_milvus.py
components/: ActiveShipmentList.tsx  CatalogTable.tsx  CustomerCareSummary.tsx  DocumentLibrary.tsx  KnowledgeUpload.tsx  PesananTable.tsx  PesananTableRingkas.tsx  RefundRequestCard.tsx  ReportDateRange.tsx  ReportDownloadOptions.tsx  ReportTypeSelector.tsx  Sidebar.tsx  StatCard.tsx  StockKurangRingkas.tsx  StockWarningSummary.tsx  SummaryCard.tsx  WhatsAppLogItem.tsx
frontend/: .dockerignore  Dockerfile  docker-compose.yml  (+2 more)
(+36 files in other folders)
