[project]
name = "cahbot"
version = "0.1.0"
description = "CANTING - AI E-commerce WhatsApp CS Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "google-genai==1.73.1",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.14.0",
    "PyJWT>=2.8.0",
    "pymilvus>=2.6.12",
    "python-multipart>=0.0.9",
    "pypdf>=5.0.0",
    "uvicorn>=0.44.0",
    "sqlalchemy>=2.0.49",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.12",
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "langchain-core==1.3.3",
    "langgraph==1.1.10",
    "langchain-google-genai>=4.2.2",
    "minio>=7.2.0",
]
